[package]
name = "ws"
version = "0.1.0"
authors = ["Kirill Vasiltsov <interalia.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.9.0", features = ["full"] }
rust-crypto = "0.2.36"
base64 = "0.13.0"
nom = "6.2.1"
pretty-hex = "0.2.1"
color-eyre = "0.5.11"
thiserror = "1.0"
